# robotica

./: CMakeLists.txt  README.md  package.xml
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: Coord.msg  Points.msg
detection_msgs/msg/: BoundingBoxes.msg
locosim/robot_control/lab_exercises/lab_palopoli/: testZEDcamera.py  ur5_generic.py  vision.py  vision1.py
locosim/robot_control/lab_exercises/lab_palopoli/cpp/: CMakeLists.txt  circlecheck  circlecheck.cpp  custom_joint_publisher.cpp  package.xml  point.cpp  ur5kinematics.cpp
locosim/robot_control/lab_exercises/lab_palopoli/cpp/include/: circlecheck.h  custom_joint_publisher.h  ur5kinematics.h
locosim/robot_descriptions/go1_description/config/: ros_impedance_controller.yaml
locosim/robot_descriptions/go1_description/gazebo/: gazebo.xacro  leg.gazebo.xacro
locosim/robot_descriptions/go1_description/scripts/: go0
locosim/robot_descriptions/go1_description/urdfs/: const.xacro
locosim/robot_descriptions/jumpleg_description/rviz/: conf.rviz
locosim/robot_descriptions/jumpleg_description/urdf/: common.xacro
locosim/robot_descriptions/starbot_description/: github_utility.txt
locosim/robot_descriptions/starbot_description/config/: ros_impedance_controller.yaml
locosim/robot_descriptions/starbot_description/robots/: starbot.urdf.xacro
locosim/robot_descriptions/starbot_description/urdfs/: leg.xacro
locosim/robot_descriptions/ur_description/sensors/zed2/simulation/: zed2.xacro
locosim/robot_descriptions/ur_description/urdf/: ur5.urdf.xacro
locosim/robot_hardware_interfaces/go1_hardware_interface/include/go1_interface/: go1_robot_hw.hpp
locosim/robot_hardware_interfaces/go1_hardware_interface/src/: go1_robot_hw.cpp
locosim/robot_hardware_interfaces/zed_wrapper/zed_wrapper/: CMakeLists.txt
locosim/robot_hardware_interfaces/zed_wrapper/zed_wrapper/cfg/: conf.rviz
locosim/robot_hardware_interfaces/zed_wrapper/zed_wrapper/launch/: zed2.launch
locosim/robot_urdf/generated_urdf/: ur5.urdf
locosim/ros_impedance_controller/worlds/: world.world
locosim/ros_impedance_controller/worlds/models/model0/: model.sdf
locosim/ros_impedance_controller/worlds/models/model1/: model.config  model.sdf
locosim/ros_impedance_controller/worlds/models/model10/: model.config  model.sdf
locosim/ros_impedance_controller/worlds/models/model2/: model.config  model.sdf
locosim/ros_impedance_controller/worlds/models/model3/: model.config  model.sdf
locosim/ros_impedance_controller/worlds/models/model4/: model.config  model.sdf
locosim/ros_impedance_controller/worlds/models/model5/: model.config  model.sdf
locosim/ros_impedance_controller/worlds/models/model6/: model.config  model.sdf
locosim/ros_impedance_controller/worlds/models/model7/: model.config  model.sdf
locosim/ros_impedance_controller/worlds/models/model8/: model.config  model.sdf
locosim/ros_impedance_controller/worlds/models/model9/: model.config  model.sdf
models/model0/: model.config  model.sdf
models/model1/: model.config  model.sdf
models/model10/: model.sdf
models/model2/: model.config  model.sdf
models/model3/: model.config
models/model4/: model.config  model.sdf
models/model5/: model.config
models/model6/: model.config  model.sdf
models/model7/: model.config  model.sdf
models/model8/: model.sdf
models/model9/: model.config  model.sdf
msg/custom_msgs/: CMakeLists.txt
msg/detection_msgs/msg/: BoundingBoxes.msg
report&media/: .~lock.RoboticaPresentation.odp#  RoboticaPresentation.odp
src/: params.py  ur5_generic.py  vision.py
src/cpp/: CMakeLists.txt  circlecheck.cpp  custom_joint_publisher.cpp  ur5kinematics.cpp
src/cpp/include/: circlecheck.h  custom_joint_publisher.h
world/: task1.world  task2.world  task3.world  world.world
yolov5_ros/launch/: yolov5.launch
yolov5_ros/src/: detect.py
yolov5_ros/src/yolov5/data/: coco128.yaml  custom_data.yaml  custom_data1.yaml
