<?xml version="1.0"?>
<package format="2">
  <name>robotica</name>
  <version>0.0.0</version>
 <description> Ur5 project group B  </description> 
 
 <maintainer email="luca.boschiero@studenti.unitn.it">lucaboschiero</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <build_depend>detecion_msgs</build_depend>
<exec_depend>detecion_msgs</exec_depend>
</package>
