<?xml version="1.0"?>
<package format="2">
  <name>lab_palopoli</name>
  <version>0.0.0</version>
  <description>Colleciton of scripts for Palopoli's lab</description>

  <maintainer email="mfocchi@todo.todo">mfocchi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <build_depend>detecion_msgs</build_depend>
<exec_depend>detecion_msgs</exec_depend>
</package>
